--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,7 @@ server.port=8090
 feign.client.config.default.logger-level=full
 
 logging.level.HwangJiHun.errorcenter=debug
+
+spring.datasource.url=jdbc:h2:tcp://localhost/~/ExceptionCenter
+spring.datasource.driver-class-name=org.h2.Driver
+spring.datasource.username=sa
