--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,10 @@
 server.port=8090
-
+spring.messages.basename=messages
 feign.client.config.default.logger-level=full
 
 logging.level.HwangJiHun.errorcenter=debug
 
-spring.datasource.url=jdbc:h2:tcp://localhost/~/ExceptionCenter
+spring.datasource.url=jdbc:h2:tcp://localhost/~/MyProject
 spring.datasource.driver-class-name=org.h2.Driver
 spring.datasource.username=sa
+spring.datasource.password=123
