--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,3 +8,5 @@ spring.datasource.url=jdbc:h2:tcp://localhost/~/MyProject
 spring.datasource.driver-class-name=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=123
+
+spring.devtools.restart.enabled=true
